syntax = "proto3";

package com.thesamet.proto.e2e;

import "scalapb/scalapb.proto";

message MessageValue {
  int32 value = 1;
}

message MapsTest {
  enum Color {
    NOCOLOR = 0;
    RED = 1;
    GREEN = 2;
    BLUE = 3;
  }

  map<string, string> str_to_str = 1;
  map<string, int32> string_to_int32 = 2;
  map<int32, string> int32_to_string = 3;
  map<bool, Color> bool_to_color = 4;
  map<string, MapsTest> string_to_mapstest = 5;
  map<int32, MessageValue> int32_to_message_field = 6;
  int32 not_a_map=200;
  repeated int32 repeated_not_a_map=201;
}

message CustomMaps {
  map<string, int32> string_to_year = 1 [(scalapb.field).value_type = "com.thesamet.pb.Years"];
  map<string, int32> person_to_int = 2 [(scalapb.field).key_type = "com.thesamet.pb.PersonId"];
  map<string, int32> person_to_year = 3 [
    (scalapb.field).key_type = "com.thesamet.pb.PersonId",
    (scalapb.field).value_type = "com.thesamet.pb.Years"
  ];
}
